<resources>
    <string name="app_name">Projet3</string>
    <string name="connection">Connection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <string name="connect">Connect</string>
    <string name="sign_up">Sign Up</string>
    <string name="presentation">Presentation</string>
    <string name="consultations">Consultations</string>
    <string name="patients">Patients</string>
    <string name="date">Date</string>
    <string name="error_field">Une erreur est survenue</string>
    <string name="back">Back</string>
    <string name="description">La clinique cardio force (CCF) de l’Institut de Cardiologie de Montréal a été créée afin d’offrir des soins optimaux et une meilleure qualité de vie aux patients atteints de cette maladie chronique. Des rencontres individualisées sont planifiées avec divers professionnels spécialisés en insuffisance cardiaque : infirmières, nutritionnistes, pharmaciens et cardiologues. L’équipe interdisciplinaire est là pour :
        vous offrir un plan de traitement à la fine pointe des connaissances répondant aux standards de qualité les plus élevé;
        assurer un suivi de votre état de santé
        assurer des soins optimaux
        ajuster votre médication selon le développement des connaissances scientifiques
        enseigner ce qu’est l’insuffisance cardiaque et comment prévenir ses complications potentielles
        optimiser l’observance aux traitements pharmacologiques et non pharmacologiques
        diminuer le nombre de visites à l’urgence et le nombre d’hospitalisations qui sont en lien avec l’insuffisance cardiaque</string>
    <string name="finish">Finish consultation </string>
    <string name="see_patient">See patient file</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cardio Force</string>
    <string name="nav_header_subtitle">contact.hospital@vivalia.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>