<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/presentation" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_rv"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/date" />
        <item
            android:id="@+id/nav_patients"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/patients" />
        <item
            android:id="@+id/nav_consultation"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/consultations" />
    </group>
</menu>