<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="@dimen/all">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/connection"
        android:textSize="@dimen/title"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:background="@color/grey"
        android:hint="@string/login"
        android:padding="@dimen/all"
        android:textSize="@dimen/all" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:background="@color/grey"

        android:hint="@string/password"
        android:padding="@dimen/all"
        android:textSize="@dimen/all" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/all"
        android:layout_marginTop="@dimen/top"
        android:layout_marginRight="@dimen/all"
        android:background="@color/red"
        android:gravity="center"
        android:padding="@dimen/all"
        android:text="@string/connect"
        android:textSize="@dimen/all" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/all"
        android:layout_marginTop="@dimen/top"
        android:layout_marginRight="@dimen/all"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/all"
        android:textColor="@color/black"
        android:text="@string/sign_up"
        android:textSize="@dimen/all" />
</LinearLayout>